--- a/module-09/index.html
+++ b/module-09/index.html
@@ -15,8 +15,8 @@
         <div class="container">
             <div class="row flex-md-row-reverse justify-content-md-between header-row">
                 <div class="col-12 col-md-4 col-lg-3 d-flex justify-content-sm-center navigation-list-mb">
-                    <button class="navigation-list-btn" type="#">Log in</button>
-                    <button class="navigation-list-btn" type="#">Sign up</button>
+                    <button class="navigation-list-btn">Log in</button>
+                    <button class="navigation-list-btn">Sign up</button>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
                     <a href="#" class="logo">URLAUBSGLÜCK</a>
